@@ -1,3 +1,8 @@
+2009-04-22  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/39639
+	* g++.dg/cpp0x/pr39639.C: New test.
+
 2009-04-22  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline:
