@@ -1,3 +1,10 @@
+2009-04-22  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/39639
+	* parser.c (cp_parser_template_argument_list): Display an error
+	when an ellipsis is not preceded by a parameter pack. Also, warn
+	about variadic templates usage without -std=c++0x.
+
 2009-04-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/39480
